--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
   "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/server.js" }],
+  "functions": {
+    "server.js": {
+      "maxDuration": 60
+    }
+  }
 }
